syntax = "proto3";
package dydxprotocol.ratelimit;

option go_package = "github.com/dydxprotocol/v4-chain/protocol/x/ratelimit/types";

import "cosmos/msg/v1/msg.proto";
import "dydxprotocol/ratelimit/limit_params.proto";
import "gogoproto/gogo.proto";

// Msg defines the Msg service.
service Msg {
  // SetLimitParams sets a `LimitParams` object in state.
  rpc SetLimitParams(MsgSetLimitParams) returns (MsgSetLimitParamsResponse);
}

// MsgSetLimitParams is the Msg/SetLimitParams request type.
message MsgSetLimitParams {
  // The address that controls the module.
  option (cosmos.msg.v1.signer) = "authority";
  string authority = 1;

  // Defines the parameters to set. All parameters must be supplied.
  LimitParams limit_params = 2 [ (gogoproto.nullable) = false ];
}

// MsgSetLimitParamsResponse is the Msg/SetLimitParams response type.
message MsgSetLimitParamsResponse {}
